force-app/main/default/objects/Scheme_Items__c/Scheme_Items__c.object-meta.xml
<CustomObject>
    <label>Sub-Scheme</label>
    <nameField>
        <label>Sub-Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Schemes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>