force-app/main/default/objects/Scheme_Items__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration (in year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>