force-app/main/default/objects/Scheme_Items__c/fields/First_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>First_Page_URL__c</fullName>
    <label>First Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>