force-app/main/default/objects/Scheme_Items__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <description>Child of Schemes</description>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipName>Scheme_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>