force-app/main/default/objects/Scheme_Items__c/fields/Scheme_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Item_Id__c</fullName>
    <displayFormat>SI-{00000}</displayFormat>
    <label>Scheme Item Id</label>
    <type>AutoNumber</type>
</CustomField>