force-app/main/default/objects/Scheme_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scheme__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>